// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Details /> should render 1`] = `
<div
  class="sc-iwsKbI gWyLDK"
>
  <div
    class="sc-htoDjs dJCVbN"
  >
    <a
      class="sc-dnqmqq lcgmO"
      href="/"
    >
      <h1
        class="sc-bxivhb gZfZeg"
        color="#fff"
        data-testid="logo"
        size="40"
      >
        What Movie?
      </h1>
    </a>
    <form
      class="sc-bdVaJa hjizjZ"
      data-testid="search-bar"
    >
      <input
        class="sc-bwzfXH aYadF"
        placeholder="Type the name of a movie"
        type="text"
        value=""
      />
      <button
        class="sc-htpNat jisJQc"
        type="submit"
      >
        <svg
          color="#fff"
          fill="currentColor"
          height="24"
          size="24"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 512 512"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          />
        </svg>
      </button>
    </form>
    <button
      class="sc-ifAKCX gTwPhi"
      data-testid="watch-later"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="24"
        size="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 512 512"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
        />
      </svg>
      <div
        class="sc-EHOje sBAZD"
        data-testid="count-value"
      >
        0
      </div>
    </button>
    <button
      class="sc-bZQynM kaqpnu"
      data-testid="favorites-btn"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="24"
        size="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 576 512"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        />
      </svg>
      <div
        class="sc-gzVnrw ibxOwE"
        data-testid="count-value"
      >
        0
      </div>
    </button>
  </div>
  <div
    class="sc-gqjmRU jfNrNN"
  >
    <h3>
      Favorites
    </h3>
    <ul>
      No movies added.
    </ul>
  </div>
  <div
    class="sc-gZMcBi fAhRbv"
  >
    <div
      class="sc-kAzzGY dZkYUI"
    >
      <div
        class="sc-chPdSV dpVMpT"
      >
        <div
          class="sc-kGXeez dkrMkf"
        >
          <img
            class="sc-jKJlTe PVCQD"
            src="https://image.tmdb.org/t/p/w185/gZCJZOn4l0Zj5hAxsMbxoS6CL0u.jpg"
          />
          <div
            class="sc-kpOJdX kNQtub"
          >
            7/10
          </div>
          <div
            class="sc-dxgOiQ gnjCAt"
          >
            <h2
              class="sc-kEYyzF kjjCcb"
            >
              Ariel (1988)
               
            </h2>
            <div
              class="sc-eNQAEJ gwCxre"
            >
              <div
                class="sc-hMqMXs eNHhuq"
              >
                73 min
              </div>
               - 
              <div
                class="sc-hMqMXs eNHhuq"
              >
                Drama
              </div>
              <div
                class="sc-hMqMXs eNHhuq"
              >
                Crime
              </div>
              <div
                class="sc-hMqMXs eNHhuq"
              >
                Comedy
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kgoBCf hQuyOM"
        >
          <div
            class="sc-jTzLTM iFTcjh"
          >
            <button
              class="sc-fjdhpX sc-jzJRlG ilSPLc"
              type="button"
            >
              <svg
                color="#fff"
                fill="currentColor"
                height="20"
                size="20"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(255, 255, 255);"
                viewBox="0 0 448 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
              <span>
                Watch Later
              </span>
            </button>
            <button
              class="sc-fjdhpX sc-cSHVUG iAJhyH"
              data-testid="favorite"
              type="button"
            >
              <svg
                color="#fff"
                fill="currentColor"
                height="24"
                size="24"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(255, 255, 255);"
                viewBox="0 0 576 512"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="sc-ckVGcZ eztdpj"
      >
        <h3
          class="sc-kkGfuU kriFMi"
        >
          Overview
        </h3>
        <p
          class="sc-eHgmQL gmKbQu"
        >
          Taisto Kasurinen is a Finnish coal miner whose father has just committed suicide and who is framed for a crime he did not commit. In jail, he starts to dream about leaving the country and starting a new life. He escapes from prison but things don't go as planned...
        </p>
        <h3
          class="sc-kkGfuU kriFMi"
        >
          Trailers
        </h3>
        <div
          class="sc-iAyFgw jrTbEH"
        >
          <p
            class="sc-eHgmQL gmKbQu"
          >
            No video found.
          </p>
        </div>
      </div>
    </div>
  </div>
  <div>
    Film data provided by TMDB
  </div>
</div>
`;

exports[`<Details /> should render the videos section when videos are provided 1`] = `
<div
  class="sc-iwsKbI gWyLDK"
>
  <div
    class="sc-htoDjs dJCVbN"
  >
    <a
      class="sc-dnqmqq lcgmO"
      href="/"
    >
      <h1
        class="sc-bxivhb gZfZeg"
        color="#fff"
        data-testid="logo"
        size="40"
      >
        What Movie?
      </h1>
    </a>
    <form
      class="sc-bdVaJa hjizjZ"
      data-testid="search-bar"
    >
      <input
        class="sc-bwzfXH aYadF"
        placeholder="Type the name of a movie"
        type="text"
        value=""
      />
      <button
        class="sc-htpNat jisJQc"
        type="submit"
      >
        <svg
          color="#fff"
          fill="currentColor"
          height="24"
          size="24"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 512 512"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          />
        </svg>
      </button>
    </form>
    <button
      class="sc-ifAKCX gTwPhi"
      data-testid="watch-later"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="24"
        size="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 512 512"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
        />
      </svg>
      <div
        class="sc-EHOje sBAZD"
        data-testid="count-value"
      >
        0
      </div>
    </button>
    <button
      class="sc-bZQynM kaqpnu"
      data-testid="favorites-btn"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="24"
        size="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 576 512"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        />
      </svg>
      <div
        class="sc-gzVnrw ibxOwE"
        data-testid="count-value"
      >
        0
      </div>
    </button>
  </div>
  <div
    class="sc-gqjmRU jfNrNN"
  >
    <h3>
      Favorites
    </h3>
    <ul>
      No movies added.
    </ul>
  </div>
  <div
    class="sc-gZMcBi fAhRbv"
  >
    <div
      class="sc-kAzzGY dZkYUI"
    >
      <div
        class="sc-chPdSV dpVMpT"
      >
        <div
          class="sc-kGXeez dkrMkf"
        >
          <img
            class="sc-jKJlTe PVCQD"
            src="https://image.tmdb.org/t/p/w185/gZCJZOn4l0Zj5hAxsMbxoS6CL0u.jpg"
          />
          <div
            class="sc-kpOJdX kNQtub"
          >
            7/10
          </div>
          <div
            class="sc-dxgOiQ gnjCAt"
          >
            <h2
              class="sc-kEYyzF kjjCcb"
            >
              Ariel (1988)
               
            </h2>
            <div
              class="sc-eNQAEJ gwCxre"
            >
              <div
                class="sc-hMqMXs eNHhuq"
              >
                73 min
              </div>
               - 
              <div
                class="sc-hMqMXs eNHhuq"
              >
                Drama
              </div>
              <div
                class="sc-hMqMXs eNHhuq"
              >
                Crime
              </div>
              <div
                class="sc-hMqMXs eNHhuq"
              >
                Comedy
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kgoBCf hQuyOM"
        >
          <div
            class="sc-jTzLTM iFTcjh"
          >
            <button
              class="sc-fjdhpX sc-jzJRlG ilSPLc"
              type="button"
            >
              <svg
                color="#fff"
                fill="currentColor"
                height="20"
                size="20"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(255, 255, 255);"
                viewBox="0 0 448 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
              <span>
                Watch Later
              </span>
            </button>
            <button
              class="sc-fjdhpX sc-cSHVUG iAJhyH"
              data-testid="favorite"
              type="button"
            >
              <svg
                color="#fff"
                fill="currentColor"
                height="24"
                size="24"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(255, 255, 255);"
                viewBox="0 0 576 512"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="sc-ckVGcZ eztdpj"
      >
        <h3
          class="sc-kkGfuU kriFMi"
        >
          Overview
        </h3>
        <p
          class="sc-eHgmQL gmKbQu"
        >
          Taisto Kasurinen is a Finnish coal miner whose father has just committed suicide and who is framed for a crime he did not commit. In jail, he starts to dream about leaving the country and starting a new life. He escapes from prison but things don't go as planned...
        </p>
        <h3
          class="sc-kkGfuU kriFMi"
        >
          Trailers
        </h3>
        <div
          class="sc-iAyFgw jrTbEH"
        >
          <iframe
            allowfullscreen=""
            class="sc-hSdWYo hcZNGB youtube-player"
            frameborder="0"
            src="https://www.youtube.com/embed/ayoutubekey?autoplay=0"
            title="YouTube"
            type="text/html"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    Film data provided by TMDB
  </div>
</div>
`;
